# cortex

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DATA_MODEL.md  DEV_PLAN.md  INTEGRATION.md  LICENSE  PROJECT_PLAN.md  QUICKSTART.md  README.md  REAME.TXT  ROADMAP.md  STRATEGY.md  SUGSE_REQUIREMENTS.md  SUMMARY.md  USAGE_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: e19d13b33f37_initial.py
cortex/: __init__.py
cortex/cli/: __init__.py  __main__.py  main.py
cortex/core/: __init__.py  config.py  db.py
cortex/core/models/: __init__.py  marker.py  message.py  session.py  state.py  task.py
cortex/mcp/: __init__.py  server.py
cortex/mcp/tools/: __init__.py  context_tools.py  conversation.py  marker_tools.py  markers.py  session.py  session_tools.py  task_tools.py
cortex/storage/: __init__.py  database.py
docs/: CONTRIBUTING.md  INSTALL.md  mcp.json
docs/examples/: projeto_api_exemplo.md
scripts/: bootstrap.sh
~/.cursor/: mcp.json
